--- a/src/main/resources/templates/homePage.html
+++ b/src/main/resources/templates/homePage.html
@@ -7,5 +7,8 @@
 <body>
 <h2>FP 8 SB</h2>
 <h3>Home Page</h3>
+<ol>
+    <li><a href="/registration">REGISTRATION</a>  </li>
+</ol>
 </body>
 </html>
