--- a/src/main/resources/templates/newUserRegistrationForm.html
+++ b/src/main/resources/templates/newUserRegistrationForm.html
@@ -5,6 +5,14 @@
     <title>User Registration Form</title>
 </head>
 <body>
-
+<div>
+    <form method="post">
+        <input type="text" name="user_name" placeholder="Имя" />
+        <input type="text" name="user_surname" placeholder="Фамилия"/>
+        <input type="email" name="user_email" placeholder="Email"/>
+        <input type="password" name="user_password" placeholder="Password"/>
+        <button type="submit">Добавить</button>
+    </form>
+</div>
 </body>
 </html>
